--- a/src/ProcessList/DetailBox.styles.css
+++ b/src/ProcessList/DetailBox.styles.css
@@ -9,21 +9,30 @@ aside.detail-box-container {
 
 div.detail-header {
   display: flex;
-  gap: 1em;
   margin-bottom: 1em;
+}
+
+div.detail-header > * + * {
+  margin: 0 0 0 1em;
 }
 
 @media screen and (max-width: 470px) {
   div.detail-header {
     flex-direction: column;
-    gap: 1em;
     margin-bottom: 1em;
+  }
+
+  div.detail-header > * + * {
+    margin: 1em 0 0 0;
   }
 
   div.detail-footer {
     width: 100%;
     display: flex;
-    gap: 0.2em;
+  }
+
+  div.detail-footer > * + * {
+    margin: 0 0 0 0.5em;
   }
 }
 
