--- a/src/components/Header/Header.styles.css
+++ b/src/components/Header/Header.styles.css
@@ -1,12 +1,18 @@
 div.header-bar {
   display: flex;
-  gap: 2em;
+}
+
+div.header-bar > * + * {
+  margin: 0 0 0 2em;
 }
 
 @media screen and (max-width: 640px) {
   div.header-bar {
     flex-direction: column;
-    gap: 1em;
+  }
+
+  div.header-bar > * + * {
+    margin: 2em 0 0 0;
   }
 }
 
