--- a/src/components/Input/Input.styles.css
+++ b/src/components/Input/Input.styles.css
@@ -2,7 +2,10 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 0.5em;
+}
+
+.input-group > * + * {
+  margin: 0.5em 0 0 0;
 }
 
 div.input-group > input {
